--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -242,6 +242,12 @@
                                                   <source>search_button</source>
                                                   <target>Search</target>
                                               </trans-unit>
+
+
+                                                <trans-unit id="form.label.category">
+                                                                                                <source>form.label.category</source>
+                                                                                                <target>Categories</target>
+                                                                                            </trans-unit>
     </body>
   </file>
 </xliff>
